<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qq.dawd_lab07.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tvThongTinKhac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:background="@android:color/holo_blue_light"
        android:labelFor="@+id/etBoSung"
        android:text="@string/lblThongTinKhac"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/etBoSung"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/lblSoThich"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tvThongTinKhac"
        app:layout_constraintRight_toRightOf="@+id/textView6"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="56dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/lblBangCap"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="393dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/lblThongTinCaNhan"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHoTen"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etHoTen"
        android:text="@string/lblHoTen"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNgaySinh"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/etHoTen"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvNgaySinh"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etNgaySinh"
        android:text="@string/lblNgaySinh"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCMND"
        app:layout_constraintLeft_toLeftOf="@+id/tvHoTen"
        app:layout_constraintTop_toTopOf="@+id/etHoTen"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvCMND"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etCMND"
        android:text="@string/lblCMND"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/etCMND"
        app:layout_constraintLeft_toLeftOf="@+id/tvNgaySinh"
        app:layout_constraintTop_toBottomOf="@+id/etNgaySinh"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etHoTen"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/etNgaySinh"
        app:layout_constraintRight_toRightOf="@+id/etNgaySinh"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etNgaySinh"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/etCMND"
        app:layout_constraintRight_toRightOf="@+id/etCMND"
        app:layout_constraintTop_toBottomOf="@+id/etHoTen"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/etBoSung"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tvThongTinKhac"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvThongTinKhac"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="117dp" />

    <EditText
        android:id="@+id/etCMND"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvNgaySinh"
        app:layout_constraintTop_toBottomOf="@+id/etNgaySinh"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="38dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView6">

        <RadioButton
            android:id="@+id/rdTrungCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblTrungCap"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="251dp" />

        <RadioButton
            android:id="@+id/rdCaoDang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCaoDang"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="251dp" />

        <RadioButton
            android:id="@+id/rdDaiHoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblDaiHoc"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="251dp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chkDocCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDoccode"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkDocSach"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/chkDocSach" />

    <CheckBox
        android:id="@+id/chkDocSach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDocsach"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/chkDocBao" />

    <CheckBox
        android:id="@+id/chkDocBao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDocbao"
        android:textSize="18sp"
        android:layout_marginStart="46dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkDocSach"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView7" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="doShowInformation"
        android:text="@string/btnGoi"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSave"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/chkDocBao"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="16dp"
        android:onClick="readData"
        android:text="@string/btnDoc"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSave"
        app:layout_constraintLeft_toLeftOf="@+id/chkDocCode"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="writeData"
        android:text="@string/btnLuu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBoSung"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
